--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.custom-font {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, serif;
+}
+.custom-box {
+  box-sizing: content-box;
+}
+.custom {
+  background-color: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(5px);
+}
+.custom-border {
+  border: .5px solid #fff;
+  width: 20%;
+}
+.sec {
+  width: 12%;
+}
+a:hover {
+  transform: scale(1.02);
+}
